--- a/style.css
+++ b/style.css
@@ -1,19 +1,37 @@
 div {
   border: 1px solid blue;
   background-color: green;
-}
-
-.reclama {
-  background-color: yellow;
+  margin-left: 5px;
 }
 
 .header {
   display: flex;
   position: absolute;
-  weight: 100%;
-
+  width: 99%;
+  margin: 5px;	
 }
 
 h1, .button_enter {
   display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.news_descriptions_list {
+	margin-top: 100px;
+	background-color: yellow;
+}
+
+.news_descriptions_list + div {
+	margin-top: 5px;
+	background-color: lightgray;
+}
+
+.news_descriptions_list div {
+	margin-bottom: 5px;
+	background-color: lightgray;
+}
+
+.num_page {
+	align-items: center;
 }
