--- a/style.css
+++ b/style.css
@@ -4,24 +4,27 @@ div {
   margin-left: 5px;
 }
 
+//шапка
 .header {
-  display: flex;
   position: absolute;
-  width: 99%;
-  margin: 5px;	
+  width: 98%;
+  margin: 5px;
+  height: 60px;	
 }
 
-h1, .button_enter {
-  display: flex;
+h1 {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.news_descriptions_list {
-	margin-top: 100px;
-  padding-top: 5px;
-	background-color: yellow;
+.login_form {
+	position: relative;
+	float: right;
+	right: 5px;
+	top: 5px;
 }
+
+//стили списка новостей
 
 .news_descriptions_list div {
 	margin-bottom: 5px;
@@ -33,15 +36,10 @@ h1, .button_enter {
   margin-top: 5px;
 }
 
-.num_page button {
-  display: inline-flex;
-  //align-items: center;
-
-}
-.num_page {
-  //align-content: center;
-  text-align: center;
-  //align-items: center;
+.news_descriptions_list {
+	margin-top: 120px;
+  padding-top: 5px;
+	background-color: yellow;
 }
 
 .news_block{
@@ -51,4 +49,19 @@ h1, .button_enter {
 
 .news_name, .news_date {
   display: inline-block;
+}
+
+.edit_button {
+	position: relative;
+	float: right;
+	top: 5px;
+}
+
+//блок нумерации страниц
+.num_page button {
+  display: inline-flex;
+}
+
+.num_page {
+  text-align: center;
 }
