--- a/style.css
+++ b/style.css
@@ -4,47 +4,62 @@ div {
   margin-left: 5px;
 }
 
-//шапка
-.header {
-  position: absolute;
-  width: 98%;
-  margin: 5px;
-  height: 60px;	
+
+/*шапка*/ 
+#page_header {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+  width: 100%;
+  height: 50px;
+  /*background-color: gray;*/
+  z-index: 1;
 }
 
-h1 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+#page_header h1 {
+  margin-top: 8px;
+  padding-left: 20px;
 }
 
 .login_form {
-	position: relative;
-	float: right;
+	position: fixed;
+	top: 0px;
 	right: 5px;
-	top: 5px;
+	z-index: 2;
 }
 
-//стили списка новостей
+.login_form h4 {
+	margin: 0;
+	padding: 0;
+}
 
+/*стили списка новостей*/
 .news_descriptions_list div {
 	margin-bottom: 5px;
 	background-color: lightgray;
 }
 
-//первый элемент списка новостей
-.news_descriptions_list div:first-child{
-  margin-top: 5px;
+/*первый элемент списка новостей*/
+.news_descriptions_list .news_block:first-child{
+  margin-top: 45px;
 }
 
 .news_descriptions_list {
-	margin-top: 120px;
+	margin-top: 5px;
   padding-top: 5px;
 	background-color: yellow;
 }
 
 .news_block{
+  margin-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
+  background-color: lightgray;
+  border: 1px solid white;
+}
+
+.news_block:hover {
+  border: 1pt solid blue;
 }
 
 .news_name, .news_date {
@@ -57,7 +72,11 @@ h1 {
 	top: 5px;
 }
 
-//блок нумерации страниц
+.news_block a p{
+	text-decoration: none;
+}
+
+/*блок нумерации страниц*/
 .num_page button {
   display: inline-flex;
 }
@@ -65,3 +84,4 @@ h1 {
 .num_page {
   text-align: center;
 }
+
