--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ div {
 	top: 0px;
 	right: 5px;
 	z-index: 2;
+	height: 50px;
 }
 
 .login_form h4 {
@@ -66,9 +67,12 @@ div {
   display: inline-block;
 }
 
+.news_date
+
+
 .edit_button {
 	position: relative;
-	float: right;
+	right: right;
 	top: 5px;
 }
 
