--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+body {
+	background-color: silver;
+}
 div {
-  border: 1px solid blue;
-  background-color: green;
+  border: 1px solid gray;
+  background-color: lightgray;
   margin-left: 5px;
 }
 
@@ -11,8 +14,7 @@ div {
 	top: 0px;
 	left: 0px;
   width: 100%;
-  height: 50px;
-  /*background-color: gray;*/
+  height: 60px;
   z-index: 1;
 }
 
@@ -23,10 +25,11 @@ div {
 
 .login_form {
 	position: fixed;
-	top: 0px;
+	top: 5px;
 	right: 5px;
 	z-index: 2;
 	height: 50px;
+	border: none;
 }
 
 .login_form h4 {
@@ -44,11 +47,17 @@ div {
 
 .short_news_list {
 	margin-top: 5px;
-  padding-top: 45px;
+  padding-top: 65px;
 	background-color: gray;
 }
 
-.short_news_block{
+.full_text_news {
+	margin-top: 5px;
+  padding-top: 65px;
+	background-color: lightgray;
+}
+
+.short_news_block {
   margin-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
