--- a/style.css
+++ b/style.css
@@ -11,16 +11,16 @@ div {
 /*шапка*/ 
 #page_header {
 	position: fixed;
-	top: 0px;
+	top: 20px;
 	left: 0px;
   width: 100%;
   height: 60px;
-  z-index: 1;
+  z-index: -1;
 }
 
 #page_header h1 {
   margin-top: 8px;
-  padding-left: 20px;
+  padding-left: 1px;
 }
 
 .login_form {
@@ -62,7 +62,7 @@ div {
   padding-left: 5px;
   padding-right: 5px;
   background-color: lightgray;
-  border: 1px solid white;
+  border: 2px solid green;
 }
 
 .short_news_block:hover {
@@ -71,22 +71,30 @@ div {
 
 .news_name, .news_date {
   display: inline-block;
-  /*border: 1px solid blue;*/
+  max-width: 70%;
+  border: 1px solid blue;
 }
 
 .news_date {
 	position: relative;
 	float: right;
+	max-width: 30%;
 	top: 8px;
 	right: 10px;
 }
 
-.button_news_edit {
-	position: relative;
-	float: right;
-	top: 5px;
+.buttons_edit_delete .button_news_edit button{
+	width: 100%;
+	padding-bottom: 5px;
 }
 
+.buttons_edit_delete {
+	position: relative;
+	float: right;
+	width: auto;
+	top: 5px;	
+	border: none;
+}
 
 .short_news_block {
 	text-decoration: none;
