--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ div {
 
 .buttons_edit_delete .button_news_edit button{
 	width: 100%;
-	padding-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 .buttons_edit_delete {
